# memorylake-hermes

./: .gitignore  LICENSE  MANIFEST.in  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml  pypi.yml
src/memorylake_hermes/: __init__.py  client.py  get_config.py  plugin.yaml
src/memorylake_hermes/skills/memorylake/: DESCRIPTION.md
src/memorylake_hermes/skills/memorylake-api/: SKILL.md
src/memorylake_hermes/skills/memorylake-config/: SKILL.md
src/memorylake_hermes/skills/memorylake-upload/: SKILL.md
src/memorylake_hermes/skills/memorylake-upload/scripts/: upload.py
src/memorylake_hermes/skills/memorylake/memorylake-api/: SKILL.md
src/memorylake_hermes/skills/memorylake/memorylake-config/: SKILL.md
src/memorylake_hermes/skills/memorylake/memorylake-upload/: SKILL.md
src/memorylake_hermes/skills/memorylake/memorylake-upload/scripts/: upload.py
src/memorylake_hermes/skills/memorylake/migrate-to-memorylake/: SKILL.md
src/memorylake_hermes/skills/memorylake/migrate-to-memorylake/scripts/: migrate.py
src/memorylake_hermes/skills/migrate-to-memorylake/: SKILL.md
src/memorylake_hermes/skills/migrate-to-memorylake/scripts/: migrate.py
